[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.2", features = ["macros", "rt-multi-thread"]}
serenity = {version = "0.11", default_features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"]}
dotenv = {version = "0.15.0"}
serde_json = "1.0.85"

